typescript/checker/tests/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess3.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess3.ts:2:20
  |
2 | var symbol = Symbol.for('myThing');
  |                    ^^^^

